サクセスメッセージの表示

--- a/app/assets/stylesheets/view/_new.scss
+++ b/app/assets/stylesheets/view/_new.scss
@@ -202,3 +202,10 @@
   border:2px solid #33CCCC;
   padding:12px; font-weight:850;
 }
+
+.flash {
+  color: #33cccc;
+  text-align: center; 
+  font-weight: bold; 
+  font-size: 20px;
+}
