--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -9,22 +9,22 @@
         %li.symbol
           >
         %li.category__hierarchy__gender
-          = link_to "メンズ ","#"
+          = link_to @item.category.parent.parent.name,"#"
         %li.symbol
           >
         %li.category__hierarchy__category
-          = link_to "ジャケット、アウター","#"
+          = link_to @item.category.parent.name,"#"
         %li.symbol
           >
         %li.category__hierarchy__item
-          = link_to "ノーカラージャケット","#"
+          = link_to @item.category.name,"#"
         %li.symbol
           >
         %li.category__hierarchy__currentItem
-          project2
+          = @item.name
     .item__box
       .item__box__name
-        product2
+        = @item.name
       .item__box__body
         .item__box__body--topImage
           =image_tag 'sushi2.png',class: 'top-image',size: '550x350'
@@ -37,11 +37,12 @@
             %li
               =image_tag 'sushi4.png', size: '120x88'
       .item__box__price
-        ¥20000
+        ¥
+        = @item.price
       .item__box__price--underText
         (税込) 送料込み
       .item__box__explanation
-        親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰
+        = @item.description
       %table.item__box__table
         %colgroup
         %tr
@@ -49,51 +50,37 @@
             出品者
           %td.item__box__table__user__input
             hoge
-
-        -# カテゴリ表示(商品出品機能未実装のため、リンクを文字列にしています。)
-        -# 商品出品機能実装後、リンクが登録されたカテゴリ名になっているか確認します。(リンクの"""を外す)
         %tr
           %td.item__box__table__category__title
             カテゴリー
           %td.item__box__table__category__input
             = link_to "#", class: "category-link" do
               %br
-              = "@item.category.parent.parent.name" # 親カテゴリ名
+              = @item.category.parent.parent.name # 親カテゴリ名
               %br
-              = "@item.category.parent.name" # 子カテゴリ名
+              = @item.category.parent.name # 子カテゴリ名
               %br
-              = "@item.category.name" # 孫カテゴリ名
-
-        %tr
-          %td.item__box__table__brand__title
-            ブランド
-          %td.item__box__table__brand__input
-            hoge
-        %tr
-          %td.item__box__table__size__title
-            商品のサイズ
-          %td.item__box__table__size__input
-            hoge
+              = @item.category.name # 孫カテゴリ名
         %tr
           %td.item__box__table__status__title
             商品の状態
           %td.item__box__table__status__input
-            新品未使用
+            = @item.stats
         %tr
           %td.item__box__table__delivery__title
             配送料の負担
           %td.item__box__table__delivery__input
-            着払い（購入者負担）
+            = @item.delivery_charge
         %tr
           %td.item__box__table__shipping__title
             発送元の地域
           %td.item__box__table__shipping__input
-            = link_to '青森県','#'
+            = @item.delivery_origin_area
         %tr
           %td.item__box__table__standard__title
             発送の目安
           %td.item__box__table__standard__input
-            1-2日で発送
+            = @item.days_until_delivery
       .option__area
         .option__area__likeBtn
           =icon("fas","star")
