お届け先住所(フロント)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "users/show";
 @import "users/logout";
 @import "users/card";
+@import "users/addresses";
 
 @import "view/index";
 @import "view/new";
