--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -118,3 +118,14 @@ $logo-color: #33CCCC;
   margin-bottom: 10px;
 }
 $backColor: #EEEEEE;
+
+// 送付先住所入力欄
+@mixin input-add {
+  margin-top: 35px;
+  font-size: 17px;
+}
+
+@mixin input-add-name {
+  margin-top: 35px;
+  font-size: 17px;
+}
