--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -32,7 +32,7 @@
   }
   .item__box{
     background-color: white;
-    height: 1400px;
+    height: 1550px;
     width: 580px;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -97,8 +97,16 @@
       border: solid 1px #DDDDDD;
       padding: 0.5em;
       font-size: 14px;
-      text-indent: 1em; 
+      text-indent: 1em;
     }
+    td.item__box__table__category__title{
+      height: 40px;
+      line-height: 40px;
+    }
+    td.item__box__table__category__input{
+      padding: 0 0 20px 20px;
+      height: 40px;
+    } 
     .category__gender,.category__name,.category__detalis,.item__box__table__shipping__input,.item__box__table__category__input{
       color: $logo-color;
       a:visited { color:$logo-color;}
@@ -132,6 +140,22 @@
       a:visited { color:black;}
     }
   }
+  .item-btn{
+    width: 300px;
+    margin: 30px auto;
+    &__edit, &__delete, &__buy{
+      display: block;
+      width: 300px;
+      height: 50px;
+      line-height: 50px;
+      background-color: $logo-color;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      text-align: center;
+    }
+  }
   .comment__box{
     background-color: white;
     height: 240px;
@@ -156,7 +180,7 @@
       height: 50px;
       background-color: $logo-color;
       width: 350px;
-      border-radius: 50px; 
+      border-radius: 50px;
       color: white;
       text-align: center;
       line-height: 50px;
