--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -49,18 +49,18 @@
           %td.item__box__table__user__title
             出品者
           %td.item__box__table__user__input
-            hoge
+            = User.find(@item.saler_id).nickname # 出品ユーザーのニックネームを取得
         %tr
           %td.item__box__table__category__title
             カテゴリー
           %td.item__box__table__category__input
-            = link_to "#", class: "category-link" do
-              %br
-              = @item.category.parent.parent.name # 親カテゴリ名
-              %br
-              = @item.category.parent.name # 子カテゴリ名
-              %br
-              = @item.category.name # 孫カテゴリ名
+            %br
+            = link_to @item.category.parent.parent.name # 親カテゴリ名
+            %br
+            = link_to @item.category.parent.name # 子カテゴリ名
+            %br
+            = link_to @item.category.name # 孫カテゴリ名
+            %br
         %tr
           %td.item__box__table__status__title
             商品の状態
@@ -87,7 +87,21 @@
           = link_to "お気に入り0","#"
         .option__area__optionlBtn
           =icon("fas","flag")
-          = link_to "不適切な商品の通報","#" 
+          = link_to "不適切な商品の通報","#"
+
+      -# ログインユーザーが出品者か否かでボタン表示の条件分岐(編集•削除 or 購入)
+      - if @item.saler_id == current_user.id
+        .item-btn
+          = link_to edit_item_path(@item), class:"item-btn__edit" do
+            商品を編集する
+          %br
+          = link_to "#", class:"item-btn__delete" do
+            商品を削除する
+      - else
+        .item-btn
+          = link_to confimation_items_path(@item), class:"item-btn__buy" do
+            購入画面に進む
+
     .comment__box
       = form_with url: "#" do |form|
         = form.text_area :name,class:"user_comment",size: "70x4" 
