--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,8 @@
 .header
   .header-content
     .header-main
-      =image_tag "logo.png",class: "header-main__image"
+      -# =image_tag "logo.png",class: "header-main__image"
+      = link_to image_tag("logo.png", class: "header-main__image"), root_path
       .heaer-main__search
         %input{type: "text_field",class: "header-main__search--field",placeholder: "キーワードから探す"}
         =link_to "#",class: "header-main__search--btn" do
