--- a/app/views/layouts/_sub_footer.html.haml
+++ b/app/views/layouts/_sub_footer.html.haml
@@ -8,6 +8,6 @@
       %li
         = link_to '特定商取引に関する表記', '#'
   .footer__logo
-    = link_to image_tag("logo-white.png", class: "image-footer"),"#"
+    = link_to image_tag("logo-white.png", class: "image-footer"), root_path
   .footer__text
     ©︎ FURIMA,Inc
