addressesコントローラーを作成
ビューファイルなどを移行

--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -2,7 +2,7 @@
 
 .mypage-wrapper
   .mypage-wrapper__contents
-    = render "menu_bar"
+    = render "users/menu_bar"
 
     .mypage__main-contents
       .mypage__main-contents__title
