--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -89,18 +89,19 @@
           =icon("fas","flag")
           = link_to "不適切な商品の通報","#"
 
-      -# ログインユーザーが出品者か否かでボタン表示の条件分岐(編集•削除 or 購入)
-      - if @item.saler_id == current_user.id
-        .item-btn
-          = link_to edit_item_path(@item), class:"item-btn__edit" do
-            商品を編集する
-          %br
-          = link_to "#", class:"item-btn__delete" do
-            商品を削除する
-      - else
-        .item-btn
-          = link_to confimation_items_path(@item), class:"item-btn__buy" do
-            購入画面に進む
+      -# ログインしていない場合は商品詳細画面に商品編集・削除・購入ボタンは表示されない
+      - if user_signed_in?
+        - if @item.saler_id == current_user.id  # ログインユーザーが出品者の場合、商品編集・削除ボタンが表示される
+          .item-btn
+            = link_to edit_item_path(@item), class:"item-btn__edit" do
+              商品を編集する
+            %br
+            = link_to "#", class:"item-btn__delete" do
+              商品を削除する
+        - else  # ログインユーザーが出品者以外の場合、商品購入ボタンが表示される
+          .item-btn
+            = link_to confimation_items_path(@item), class:"item-btn__buy" do
+              購入画面に進む
 
     .comment__box
       = form_with url: "#" do |form|
