--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -9,29 +9,19 @@
           %span 必須
         %p 最大10枚までアップロードできます
 
-
-
-        #image-box
-          #previews
-            - if @items.persisted?
-              - @items.images.each_with_index do |image, i|
-                = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
-
-          =form.fields_for :images,class:"exhibition__main__container__uploader" do |image|
-            .exhibition__main__container__uploader__text.js-file_group{"data-index" => "#{image.index}"}
-              =image.file_field :url,class:"js-file"
-              %br/
-              %span.js-remove 削除
-            - if @items.persisted?
-              = image.check_box :_destroy, data:{index:imgae.index},class:"hidden-destroy"
-          - if @items.persisted?
-            .js-file_group{"data-index" => "#{@items.images.count}"}
-              =file_field_tag :url,name:"item[images_attributes][#{@items.images.count}][url]", class: 'js-file'
-              .js-remove 削除
-          %hr/
-          -# ----------------↑今はまだ一枚しか登録できません。後にファイル修正します。--------------
-
-          
+        = form.fields_for :images do |image|
+          .dropzone-container
+            #preview
+            .dropzone-area
+              = image.label :url, class: "dropzone-box", for: "upload-image" do
+                .input_area
+                  = image.file_field :url, id: "upload-image", class: "upload-image", 'data-image': 0
+                %p ここをクリックしてください
+          .dropzone-container
+            #preview2
+            .dropzone-area2
+              = image.label :url, class: "dropzone-box", for: "upload-image" do
+                %p ここをクリックしてください
 
       .exhibition__main__container
         .exhibition__main__container__topic
