--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -96,7 +96,7 @@
             = link_to edit_item_path(@item), class:"item-btn__edit" do
               商品を編集する
             %br
-            = link_to "#", class:"item-btn__delete" do
+            = link_to item_path(@item), method: "delete", class:"item-btn__delete" do
               商品を削除する
         - else  # ログインユーザーが出品者以外の場合、商品購入ボタンが表示される
           .item-btn
