--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -2,7 +2,7 @@
   .exhibition__top
     = image_tag('logo.png',height:"49px",width:"185px",class:"logo")
   .exhibition__main
-    =form_with(model: @items,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
+    =form_with(model: @item,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
       .exhibition__main__container
         .exhibition__main__container__topic
           %label 出品画像
@@ -81,13 +81,6 @@
             =form.number_field :price,id:"price",mini: 300, max: 9999999
         %p 販売手数料(10%)
         %hr/
-
-        %p user_id（仮）
-        =form.number_field :user_id,id:"price"
-        %p saler_id（仮）
-        =form.number_field :saler_id,id:"price"
-        -# ----------↑ログイン機能実装後削除-------------
-
 
       .exhibition__main__container
         %p 販売利益
