--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -5,7 +5,7 @@
 }
 .background{
   background-color: $backColor;
-  height: 2100px;
+  height: 2200px;
   width: 100vw;
   .category{
     background-color:white;
@@ -32,7 +32,7 @@
   }
   .item__box{
     background-color: white;
-    height: 1550px;
+    height: 1650px;
     width: 580px;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -47,7 +47,7 @@
       font-weight: bold;
     }
     &__body{
-      height: 440px;
+      height: 540px;
       &--topImage{
         height: 350px;
         text-align: center;
@@ -62,6 +62,7 @@
         .subimages__box{
           display: flex;
           justify-content: center;
+          // flex-wrap: wrap;
           img{
             object-fit: cover;
             cursor: default;
