--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -82,16 +82,33 @@
         %br
         方法があります。
     
+  -# .main-categories
+  -#   %h2.main-categories__title ピックアップカテゴリー
+  -#   =link_to "新規投稿商品" ,"#",class: "main-categories__subtitle"
+  -#   %ul.main-categories__lists
+  -#     %li
+  -#       =image_tag "sample-image1.jpg",class: "main-categories__lists--image" 
+  -#     %li
+  -#       =image_tag "sample-image2.jpg",class: "main-categories__lists--image"
+  -#     %li
+  -#       =image_tag "sample-image3.jpg",class: "main-categories__lists--image"
+
+
   .main-categories
     %h2.main-categories__title ピックアップカテゴリー
     =link_to "新規投稿商品" ,"#",class: "main-categories__subtitle"
-    %ul.main-categories__lists
-      %li
-        =image_tag "sample-image1.jpg",class: "main-categories__lists--image" 
-      %li
-        =image_tag "sample-image2.jpg",class: "main-categories__lists--image"
-      %li
-        =image_tag "sample-image3.jpg",class: "main-categories__lists--image"
+    .main-categories__lists
+      - @items.each do |item|
+        = link_to item_path(id: item.id) ,class:"main-categories__lists__item" do
+          - item.images.last(1).each do |image| 
+            = image_tag image.url.url
+            .main-categories__lists__item__text
+              %p= item.name
+              %p= "#{item.price}円"
+              %p#tax (税込み)
+
+
+
 
   .main-brands
     %h2.main-brands__title ピックアップブランド
