商品一覧の画像つぶれの修正
object-fit: cover;にて修正

--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -119,6 +119,7 @@
       img{
         width: 220px;
         height: 150px;
+        object-fit: cover;
       }
       &__text{
         padding: 16px;
