--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -155,7 +155,7 @@
   .item-btn{
     width: 300px;
     margin: 30px auto;
-    &__edit, &__delete, &__buy{
+    &__edit, &__delete,,&__sold, &__buy{
       display: block;
       width: 300px;
       height: 50px;
