カテゴリ別商品一覧表示機能の追加
Itemコントローラに人気のカテゴリ取得アクションを定義

--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -110,7 +110,7 @@
     flex-wrap: wrap;
     width: 780px;
     margin: 26px auto;
-    &__item{
+    &__item, &__ladies, &__mens{
       display: grid;
       width: 220px;
       height: 245px;
