変数名修正、コメントアウトの記載

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -95,9 +95,10 @@
               %p= "#{item.price}円"
               %p#tax (税込み)
 
+    -# レディースカテゴリの新着商品の一覧表示
     %h2.main-categories__title レディース新着アイテム
     .main-categories__lists
-      - @cat_no1.each do |item|
+      - @category_no1.each do |item|
         = link_to item_path(id: item.id) ,class:"main-categories__lists__ladies" do
           - item.images.last(1).each do |image|
             = image_tag image.url.url
@@ -106,9 +107,10 @@
               %p= "#{item.price}円"
               %p#tax (税込み)
 
+    -# メンズカテゴリの新着商品の一覧表示
     %h2.main-categories__title メンズ新着アイテム
     .main-categories__lists
-      - @cat_no196.each do |item|
+      - @category_no196.each do |item|
         = link_to item_path(id: item.id) ,class:"main-categories__lists__mens" do
           - item.images.last(1).each do |image|
             = image_tag image.url.url
