--- a/app/views/items/exhibition.html.haml
+++ b/app/views/items/exhibition.html.haml
@@ -4,26 +4,47 @@
   .exhibition__main
     =form_with(model: @item,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
       = render 'layouts/error_messages', model: form.object
-      .exhibition__main__container
-        .exhibition__main__container__topic
-          %label 出品画像
-          %span 必須
-        %p 最大10枚までアップロードできます
 
-        = form.fields_for :images, @item.images.new do |image|
-          .dropzone-container
-            #preview
-            .dropzone-area
-              = image.label :url, class: "dropzone-box", for: "upload-image" do
-                .input_area
-                  = image.file_field :url, id: "upload-image", class: "upload-image", 'data-image': 0
-                %p ここをクリックしてください
-          .dropzone-container
-            #preview2
-            .dropzone-area2
-              = image.label :url, class: "dropzone-box", for: "upload-image" do
-                %p ここをクリックしてください
-        %hr/
+      .exhibit__main__itemProfile__inputForm__sellImage
+        .exhibit__main__itemProfile__inputForm__sellImage__upload
+          .exhibit__main__itemProfile__inputForm__sellImage__upload__head
+            .notation 出品画像
+            .formRequire 必須
+          .exhibit__main__itemProfile__inputForm__sellImage__upload__attention
+            最大5枚までアップロードできます
+          .exhibit__main__itemProfile__inputForm__sellImage__upload__box
+            .prev-content
+            .label-content
+              %label{for: "item_images_attributes_0_url", class: "label-box", id: "label-box--0"}
+                %pre.label-box__text-visible クリックしてファイルをアップロード
+            .hidden-content
+              = form.fields_for :images,@item.images.new do |i|
+                = i.file_field :url, class: "hidden-field"
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][1][url]", id: "item_images_attributes_1_url" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][2][url]", id: "item_images_attributes_2_url" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][url]", id: "item_images_attributes_3_url" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][url]", id: "item_images_attributes_4_url" }
+      
+      -# .exhibition__main__container
+      -#   .exhibition__main__container__topic
+      -#     %label 出品画像
+      -#     %span 必須
+      -#   %p 最大10枚までアップロードできます
+
+      -#   = form.fields_for :images, @item.images.new do |image|
+      -#     .dropzone-container
+      -#       #preview
+      -#       .dropzone-area
+      -#         = image.label :url, class: "dropzone-box", for: "upload-image" do
+      -#           .input_area
+      -#             = image.file_field :url, id: "upload-image", class: "upload-image", 'data-image': 0
+      -#           %p ここをクリックしてください
+      -#     .dropzone-container
+      -#       #preview2
+      -#       .dropzone-area2
+      -#         = image.label :url, class: "dropzone-box", for: "upload-image" do
+      -#           %p ここをクリックしてください
+      -#   %hr/
 
       .exhibition__main__container
         .exhibition__main__container__topic
