--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -1,5 +1,30 @@
 .mypage-wrapper {
   background-color:  #f8f8f8;
+  position: relative;
+  &__icon {
+    position: fixed;
+    bottom: 32px;
+    font-size: 22px;
+    height: 160px;
+    right: 32px;
+    width: 160px;
+    background-color: #3CCACE;
+    border-radius: 50%;
+    z-index: 2;
+    &__form {
+      width: 160px;
+      height: 160px;
+      padding-top: 32px;
+      text-align: center;
+      &__first {
+        color: white;
+      }
+      &__second {
+        color: white;
+        font-size: 50px;
+      }
+    }
+  }
 
   &__contents {
     width: 1000px;
