--- a/app/assets/stylesheets/users/_card.scss
+++ b/app/assets/stylesheets/users/_card.scss
@@ -193,7 +193,7 @@
             background-color: #3ccace;
             color: white;
             font-size: 14px;
-            padding-top: 15px;
+            height: 50px;
             outline: none;
             width: 100%;
           }
