--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -98,8 +98,7 @@
             = image_tag image.url.url
             .main-categories__lists__item__text
               %p= item.name
-              %p= "#{item.price}円"
-              %p#tax (税込み)
+              %p= "#{item.price}円 (税込)"
 
     -# レディースカテゴリの新着商品の一覧表示
     %h2.main-categories__title レディース新着アイテム
@@ -110,8 +109,7 @@
             = image_tag image.url.url
             .main-categories__lists__ladies__text
               %p= item.name
-              %p= "#{item.price}円"
-              %p#tax (税込み)
+              %p= "#{item.price}円 (税込)"
 
     -# メンズカテゴリの新着商品の一覧表示
     %h2.main-categories__title メンズ新着アイテム
@@ -122,7 +120,6 @@
             = image_tag image.url.url
             .main-categories__lists__mens__text
               %p= item.name
-              %p= "#{item.price}円"
-              %p#tax (税込み)
+              %p= "#{item.price}円 (税込)"
 
 =render 'layouts/footer'
