--- a/app/views/items/view.html.haml
+++ b/app/views/items/view.html.haml
@@ -8,7 +8,6 @@
           = image_tag image.url.url
           .main-categories__lists__item__text
             %p= item.name
-            %p= "#{item.price}円"
-            %p#tax (税込み)
+            %p= "#{item.price}円 (税込)"
 
 =render 'layouts/footer'
