flex-wrap: wrap;の追加
商品詳細画面にて、商品画像の6枚目以降を2段目に表示させる

--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -62,7 +62,7 @@
         .subimages__box{
           display: flex;
           justify-content: center;
-          // flex-wrap: wrap;
+          flex-wrap: wrap;
           img{
             object-fit: cover;
             cursor: default;
