商品一覧表示欄の拡大

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -98,7 +98,8 @@
             = image_tag image.url.url
             .main-categories__lists__item__text
               %p= item.name
-              %p= "#{item.price}円 (税込)"
+              %p= "#{item.price}円"
+              %p#tax (税込)
 
     -# レディースカテゴリの新着商品の一覧表示
     %h2.main-categories__title レディース新着アイテム
@@ -109,7 +110,8 @@
             = image_tag image.url.url
             .main-categories__lists__ladies__text
               %p= item.name
-              %p= "#{item.price}円 (税込)"
+              %p= "#{item.price}円"
+              %p#tax (税込)
 
     -# メンズカテゴリの新着商品の一覧表示
     %h2.main-categories__title メンズ新着アイテム
@@ -120,6 +122,7 @@
             = image_tag image.url.url
             .main-categories__lists__mens__text
               %p= item.name
-              %p= "#{item.price}円 (税込)"
+              %p= "#{item.price}円"
+              %p#tax (税込)
 
 =render 'layouts/footer'
