--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -142,7 +142,7 @@
     &__item, &__ladies, &__mens{
       display: grid;
       width: 220px;
-      height: 245px;
+      height: 310px;
       background-color: white;
       margin-bottom: 40px;
       img{
@@ -155,8 +155,10 @@
         p{
           color: black;
         }
+        #tax{
+          font-size: 11px;
+        }
       }
-
     }
     &--image {
       @include lists-image;
