エラーの修正

--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -94,7 +94,7 @@
     .main-categories__lists
       - @items.each do |item|
         = link_to item_path(id: item.id) ,class:"main-categories__lists__item" do
-          - item.images.last(1).each do |image| 
+          - item.images.first(1).each do |image| 
             = image_tag image.url.url
             .main-categories__lists__item__text
               %p= item.name
@@ -106,7 +106,7 @@
     .main-categories__lists
       - @category_no1.each do |item|
         = link_to item_path(id: item.id) ,class:"main-categories__lists__ladies" do
-          - item.images.last(1).each do |image|
+          - item.images.first(1).each do |image|
             = image_tag image.url.url
             .main-categories__lists__ladies__text
               %p= item.name
@@ -118,7 +118,7 @@
     .main-categories__lists
       - @category_no196.each do |item|
         = link_to item_path(id: item.id) ,class:"main-categories__lists__mens" do
-          - item.images.last(1).each do |image|
+          - item.images.first(1).each do |image|
             = image_tag image.url.url
             .main-categories__lists__mens__text
               %p= item.name
