全ファイルアクション名変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,6 @@
 @import "items/index";
 @import "items/show";
 @import "items/confimation";
-@import "items/exhibition";
+@import "items/new";
 
 @import "addresses/new";
