--- a/app/assets/stylesheets/items/_new.scss
+++ b/app/assets/stylesheets/items/_new.scss
@@ -1,4 +1,4 @@
-.exhibition{
+.new{
   background-color: #F5F5F5;
   &__top{
     .logo{
@@ -79,7 +79,7 @@
           }
         }
       }
-      .exhibition__main__container__category__box--select{
+      .new__main__container__category__box--select{
         margin-bottom: 14px;
         height: 46px;
         width: 620px;
