--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -2,7 +2,7 @@
 
 .main
   .main-icon
-    %a{ href: "/items/exhibition"}
+    %a{ href: "/items/new"}
       .main-icon__form
         .main-icon__form__first 出品
         .main-icon__form__second
