--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
 
 .mypage-wrapper
   .mypage-wrapper__icon
-    %a{ href: "/items/exhibition"}
+    %a{ href: "/items/new"}
       .mypage-wrapper__icon__form
         .mypage-wrapper__icon__form__first 出品
         .mypage-wrapper__icon__form__second
