--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,12 +1,12 @@
-.exhibition
-  .exhibition__top
+.new
+  .new__top
     = link_to image_tag('logo.png',height:"49px",width:"185px",class:"logo"), root_path # ロゴのリンク先をトップページへ指定
-  .exhibition__main
+  .new__main
     =form_with(model: @item,local:true,class:"sell-form dropzone", id:"item-dropzone") do |form|
       = render 'layouts/error_messages', model: form.object
 
-      .exhibition__main__container
-        .exhibition__main__container__topic
+      .new__main__container
+        .new__main__container__topic
           %label 出品画像
           %span 必須  
         %p 最大5枚までアップロードできます
@@ -23,55 +23,55 @@
               %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][url]", id: "item_images_attributes_3_url" }
               %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][url]", id: "item_images_attributes_4_url" }
 
-      .exhibition__main__container
-        .exhibition__main__container__topic
+      .new__main__container
+        .new__main__container__topic
           %label 商品名
           %span 必須
         =form.text_field :name,maxlength: 40,placeholder:"40文字まで"
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label 商品の説明
           %span 必須
         =form.text_area :description,maxlength: 1000,placeholder:"商品の説明（必須 1,000文字以内）"
-        .exhibition__main__container__letters
+        .new__main__container__letters
           %p 0/1000
         %hr/
 
-      .exhibition__main__container
+      .new__main__container
         %p 商品の詳細
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label カテゴリー
           %span 必須
 
-        .exhibition__main__container__category
-          .exhibition__main__container__category__box
-            = form.collection_select :category_id, @category_parent_array, :id, :name, {prompt:"選択してください"}, {class: 'exhibition__main__container__category__box--select', id: 'parent_category'}
+        .new__main__container__category
+          .new__main__container__category__box
+            = form.collection_select :category_id, @category_parent_array, :id, :name, {prompt:"選択してください"}, {class: 'new__main__container__category__box--select', id: 'parent_category'}
             
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label 商品の状態
           %span 必須
         =form.select:stats,[["新品、未使用"],["未使用に近い"],["目立った傷や汚れなし"],["やや傷や汚れあり"],["傷や汚れあり"],["全体的に状態が悪い"]],prompt:"選択してください"
         %hr/
 
-      .exhibition__main__container
+      .new__main__container
         %p 配送について
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label 配送料の負担
           %span 必須
         =form.select:delivery_charge,[["送料込み（出品者負担）"],["着払い（購入者負担）"]],prompt:"選択してください"
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label 配送元の地域
           %span 必須
         =form.collection_select(:delivery_origin_area,Prefecture.all,:name, :name, {prompt:"選択してください"})
-        .exhibition__main__container__topic
+        .new__main__container__topic
           %label 配送までの日数
           %span 必須
         =form.select:days_until_delivery,[["１〜２日で発送"],["２〜３日で発送"],["４〜７日で発送"]],prompt:"選択してください"
         %hr/
 
-      .exhibition__main__container
+      .new__main__container
         %p 価格(¥300~9,999,999)
         .box
-          .exhibition__main__container__topic
+          .new__main__container__topic
             %label 販売価格
             %span 必須
           .box__price
@@ -80,19 +80,19 @@
         %p 販売手数料(10%)
         %hr/
 
-      .exhibition__main__container
+      .new__main__container
         %p 販売利益
 
-      .exhibition__main__btn
+      .new__main__btn
         = form.submit "出品する",class:"do"
         = link_to "下書きに保存","#",class:"suspense"
         = link_to "もどる","#",class:"back"
 
-      .exhibition__main__precaution
+      .new__main__precaution
         %p 禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
         
-  .exhibition__footer
-    %ul.exhibition__footer__poricy
+  .new__footer
+    %ul.new__footer__poricy
       %li= link_to "プライバシーポリシー","#"
       %li= link_to "FURIMA利用規約","#"
       %li= link_to "特定商取引に関する法律表記","#"
