--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -96,7 +96,7 @@
 
       .exhibition__main__btn
         = form.submit "修正する",class:"do"
-        = link_to "もどる","#",class:"back"
+        = link_to "もどる",item_path(id: @item.id),class:"back"
 
       .exhibition__main__precaution
         %p 禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
